--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ homepage = "https://github.com/ysoftman/ysoftman-lemon"
 [tool.poetry.scripts]
 # ysoftman_lemon 으로 실행하기 위해서
 # PyPI/Poetry wheel에서는 스크립트 이름에 하이픈(-) 금지
-my_package_cli = 'ysoftman_lemon=ysoftman_lemon.main:main'
+ysoftman_lemon = "ysoftman_lemon.main:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
